--- a/tutorial.html
+++ b/tutorial.html
@@ -12,7 +12,7 @@
 <img src="tutorial/photo1.png" alt="" /></p>
 
 <p>Он выглядит как-то так.
-<img src="tutorial/photo2png" alt="" /></p>
+<img src="tutorial/photo2.png" alt="" /></p>
 
 <h2 id="2">Шаг 2 - Зарегистрируйтесь</h2>
 
